# OverflowingPalette

./: .gitignore  CMakeLists.txt  CMakeLists.txt.RdFesk  ColorNameInputDialog.h  ColorSelectorWidget.cpp  ColorSelectorWidget.h  GameConfigManager.h  GameConfigManager.ui  GameEditorMainWidget.h  GameEditorPanelWidget.h  GameEditorSideToolbox.h  GamePanelConfig.cpp  OverflowPaletteBackEnd.h  OverflowPaletteGamePanelWidget copy.ui  Readme.md  WutheringWaveOfficialGames.json  overflowpalettewindow.cpp  overflowpalettewindow.h
src/: main.cpp
src/core/: GamePanelConfig.h
src/ui/editor/: ColorEditor.cpp  ColorEditor.h  GameEditorMainWidget.cpp  GameEditorPanelWidget.cpp  GameEditorSideToolbox.cpp
src/ui/game/: GameConfigManager.cpp  OverflowPaletteGamePanelWidget.cpp  OverflowPaletteGamePanelWidget.h
src/ui/widgets/: ColorEditorListWidgetItem.h
ui_files/: GameEditorMainWidget.ui  GameEditorSideToolbox.ui  OverflowPaletteGamePanelWidget.ui  coloreditor.ui  overflowpalettewindow.ui
